# com.deepin.demo

./: .gitignore  CMakeLists.txt  README.md
debian/: changelog  control  rules
src/: CMakeLists.txt  main.cpp
src/metadata/: info
src/metadata/entries/applications/: com.deepin.demo.desktop
src/metadata/entries/autostart/: com.deepin.music.autostart.desktop
src/metadata/entries/services/: com.deepin.music.service
